Deixando a documentaçao swagger mais alinhada com server.ts
